# scaf

./: .gitignore  .scafrc  Makefile.in  README  configure  load-defaults.sh  rpm.spec.in  run.sh  scaf
data/: MIT.license  bash.sh  qtmain.cpp  repomaker.sh  scaf-scaf.sh  scaf.cpp  scaf.hpp  scaf.pl  scaf.pm  scaf.sh  scaf.xml  scaf.xsl  scaflib.sh
data/bashapp/: .gitignore  Makefile.in  README  configure  rpm.spec.in  run.sh
data/capp/: .gitignore  Makefile.am  configure.ac  rpm.spec.in  scaf.m4
data/capp/include/: Bootstrapper.hpp  util.hpp
data/capp/src/: Bootstrapper.cpp  Makefile.am  main.cpp
data/capp/tests/: Makefile.am  basic.cpp  init.hpp  main.cpp
data/clib/: .gitignore  README  configure.ac  rpm.spec.in
data/clib/include/: scaf.hpp
data/clib/src/: Makefile.am
data/clib/tests/: BasicTests.cpp  BasicTests.hpp  Makefile.am  init.hpp
data/marla/: .gitignore  Makefile  Makefile.marla  README  httpd.conf  rpm.spec.in
data/marla/cgi/: debug.sh
data/marla/config/: default.config  headless.config
data/marla/static/: README
data/perllib/: .gitignore  Makefile.PL  README  perllib.spec  rpm.sh
data/qtapp/: .gitignore  Makefile.am  configure.ac  rpm.spec.in  scaf.m4
data/qtapp/include/: Bootstrapper.hpp  util.hpp
data/qtapp/m4/: ax_have_qt.m4
data/qtapp/src/: .gitignore  Bootstrapper.cpp  Makefile.am  main.cpp  util.cpp
data/qtapp/tests/: BasicTests.hpp  Makefile.am  basic.cpp  main.cpp  make_wrapper.sh
data/qtlib/: .gitignore  Makefile.am  configure.ac  rpm.spec.in  scaf.m4
data/qtlib/include/: Makefile.am  scaf.hpp
data/qtlib/m4/: ax_have_qt.m4
data/qtlib/src/: Makefile.am  scaf.cpp
data/qtlib/tests/: .gitignore  Makefile.am  basic.cpp
data/qtproject/: README  configure.ac
types.d/: bash  bashap  bashapp  capp  clib  cpp  marla  mit  perl  perllib  perlmod  pl  qtapp  qtlib  qtmain  qtproject  repomaker  scaf  scaflib  xml  xslt
